--- a/javascript/proyecto-angular/src/app/components/create/create.component.css
+++ b/javascript/proyecto-angular/src/app/components/create/create.component.css
@@ -1,15 +1,3 @@
-.container {
-    padding: 50px;
-    padding-top: 10px;
-}
-
-.container h2 {
-    display: block;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-}
-
 form {
     width: 80%;
 }
@@ -54,6 +42,23 @@ form input[disabled] {
 
 .formError {
     padding: 5px;
+    color: red;
+    text-shadow: 1px 1px 2px #ccc;
+}
+
+.message {
+    width: 50%;
+    padding: 5px;
+    border: 1px solid #eee;
+    background: ;
+}
+
+.success {
+    color: green;
+    text-shadow: 1px 1px 2px #ccc;
+}
+
+.failed {
     color: red;
     text-shadow: 1px 1px 2px #ccc;
 }
