--- a/javascript/proyecto-angular/src/assets/css/styles.css
+++ b/javascript/proyecto-angular/src/assets/css/styles.css
@@ -108,3 +108,56 @@ footer {
     margin-top: 15px;
     color: rgba(0, 0, 0, 0.5)
 }
+
+#title {
+    width: 70%;
+    margin: 0px auto;
+    text-align: center;
+    margin-bottom: 70px;
+    margin-top: 20px;
+}
+
+#title h1 {
+    font-family: finger;
+    font-size: 60px;
+    border-bottom: 1px solid black;
+}
+
+#title h2 {
+    font-size: 25px;
+    color: gray;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    ;
+}
+
+article.about {
+    width: 70%;
+    margin: 0px auto;
+    margin-bottom: 20px;
+    font-size: 23px;
+}
+
+.about h2 {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+    margin-block: 5px;
+}
+
+.about p {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    text-align: justify;
+}
+
+.container {
+    padding: 50px;
+    padding-top: 10px;
+}
+
+.container h2 {
+    display: block;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
