--- a/javascript/proyecto-angular/src/assets/css/styles.css
+++ b/javascript/proyecto-angular/src/assets/css/styles.css
@@ -90,6 +90,7 @@ header a:hover,
 
 #content {
     min-height: 500px;
+    height: auto;
     width: 80%;
     margin: 0px auto;
     box-shadow: 0px 0px 40px black;
@@ -97,6 +98,7 @@ header a:hover,
     border-right: 1px solid #b7b7b7;
     background: rgba(255, 255, 255, 0.7);
     padding-top: 120px;
+    padding-bottom: 30px;
 }
 
 
@@ -155,9 +157,53 @@ article.about {
     padding-top: 10px;
 }
 
+.container .image {
+    float: left;
+    width: 47%;
+}
+
+.container .image img {
+    width: 100%;
+}
+
+.container .data {
+    float: left;
+    width: 48%;
+    margin-left: 30px;
+}
+
 .container h2 {
     display: block;
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
     margin-bottom: 15px;
+}
+
+
+/*pagina de proyectos*/
+
+.project {
+    list-style: none;
+    display: block;
+    float: left;
+    width: 30%;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+}
+
+.project .image {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+}
+
+.project img {
+    width: 100%;
+}
+
+.project a {
+    text-decoration: none;
+    color: black;
 }
