--- a/javascript/proyecto-angular/src/app/components/create/create.component.html
+++ b/javascript/proyecto-angular/src/app/components/create/create.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="project">
     <h2>{{ title }}</h2>
     <div class="message success" *ngIf="status=='success'">
         El proyecto se ha creado correctamente, puedes <a [routerLink]='["/proyecto",saveProject._id]'>verlo aquí</a>
@@ -45,6 +45,9 @@
         </p>
         <p>
             <label for="image">Imagen del Proyecto</label>
+            <span class='image' *ngIf="project.image" style="float:none">
+            <img src="{{url+'get-image/'+project.image}}" style=" width:100px"/>
+        </span><br>
             <input type="file" name="image" placeholder="Subir Imagen" (change)='fileChangeEvent($event)' />
             <!--#image="ngModel" [(ngModel)]="project.image" required-->
         </p>
