--- a/javascript/proyecto-angular/src/app/components/detail/detail.component.html
+++ b/javascript/proyecto-angular/src/app/components/detail/detail.component.html
@@ -1,11 +1,20 @@
-<div class='container'>
-    <div class='image'>
-        <img src="{{url+'get-image/'+project.image}}" *ngIf="project.image" />
+<div class='container' *ngIf="project">
+    <div class='image' *ngIf="project.image">
+        <img src="{{url+'get-image/'+project.image}}" />
     </div>
     <div class='data'>
         <h1>{{project.name}}</h1>
         <h3>{{project.description}}</h3>
         <p>{{project.category}}</p>
         <p>{{project.langs}}</p>
+        <p *ngIf="!confirm">
+            <a [routerLink]='["/editar-proyecto",project._id ]' class='button-edit'>Editar</a>
+            <a (click)='setConfirm(true)' class='button-edit'>Borrar</a>
+        </p>
+        <p *ngIf="confirm">
+            <span class='confirm'> ¿Estas seguro de eliminar este proyecto?<br></span>
+            <a (click)='setConfirm(false)' class='button-edit'>cancelar</a>
+            <a (click)='deleteProject(project._id)' class='button-edit'>Borrar Definitivamente</a>
+        </p>
     </div>
 </div>
