--- a/javascript/proyecto-angular/src/assets/css/styles.css
+++ b/javascript/proyecto-angular/src/assets/css/styles.css
@@ -152,6 +152,9 @@ article.about {
     text-align: justify;
 }
 
+
+/*seccion formulario*/
+
 .container {
     padding: 50px;
     padding-top: 10px;
@@ -164,6 +167,7 @@ article.about {
 
 .container .image img {
     width: 100%;
+    overflow: hidden;
 }
 
 .container .data {
@@ -177,6 +181,82 @@ article.about {
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
     margin-bottom: 15px;
+}
+
+form {
+    width: 80%;
+}
+
+form label {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+form input[type="text"],
+form input[type="number"],
+form input[type="email"],
+form textarea {
+    width: 40%;
+    padding: 5px;
+}
+
+form button,
+form input[type="submit"],
+.button-edit,
+.button-delete {
+    display: block;
+    font-size: 17px;
+    padding: 10px;
+    margin-top: 15px;
+    color: white;
+    background: rgba(53, 103, 164, 1);
+    border: 1px rgba(13, 67, 133, 1);
+    cursor: pointer;
+}
+
+.button-edit,
+.button-delete {
+    width: 30%;
+    float: left;
+    margin-right: 10px;
+    text-decoration: none;
+    text-align: center;
+}
+
+edit form button:hover,
+form input[type="submit"]:hover {
+    background: rgba(53, 103, 164, 0.8);
+    border: 1px rgba(13, 67, 133, 1);
+}
+
+form input[disabled] {
+    opacity: 0.4;
+    cursor: not-allowed;
+}
+
+.formError {
+    padding: 5px;
+    color: red;
+    text-shadow: 1px 1px 2px #ccc;
+}
+
+.message {
+    width: 50%;
+    padding: 5px;
+    border: 1px solid #eee;
+    background: ;
+}
+
+.success {
+    color: green;
+    text-shadow: 1px 1px 2px #ccc;
+}
+
+.failed {
+    color: red;
+    text-shadow: 1px 1px 2px #ccc;
 }
 
 
@@ -206,4 +286,10 @@ article.about {
 .project a {
     text-decoration: none;
     color: black;
+}
+
+.confirm {
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
 }
